--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "tailwindcss": "^3.1.0",
         "vite": "^2.9.11",
         "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "@tailwindcss/line-clamp": "^0.4.0"
     }
 }
