--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "buildcss": "tailwindcss build ./resources/css/app.css -o css/style.css"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.25",
         "laravel-vite-plugin": "^0.4.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.6",
         "vite": "^2.9.11",
         "webpack-cli": "^4.10.0"
     },
